@@ -9,6 +9,7 @@ TargetProductList="0001,0002,0015,0016,0017,0031,0037,0052,0055,0063,0064,0108,0
 
 MessageContent="5553424312345678000000000000061e000000000000000000000000000000"
 MessageContent2="5553424312345679000000000000061b000000020000000000000000000000"
+MessageContent3="55534243123456702000000080000c85010101180101010101000000000000"
 
 NeedResponse=1
 
