@@ -1,0 +1,12 @@
+########################################################
+# BSNL Capitel
+
+DefaultVendor= 0x1c9e
+DefaultProduct=0x9e00
+
+TargetClass=0xff
+
+MessageContent="55534243123456780000000000000606f50402527000000000000000000000"
+
+CheckSuccess=20
+
